@@ -39,7 +39,6 @@
 
 #include <mach-o/dyld.h>
 #include <mach-o/nlist.h>
-#include <sys/stat.h>
 #include <dlfcn.h>
 #include <string.h>
 
@@ -73,12 +72,8 @@ DLSyms* dlSymsInit(const char* libPath)
 	DLLib* pLib;
 	DLSyms* pSyms = NULL;
 	uint32_t i, n;
-	struct stat st0;
 	const struct MACH_HEADER_TYPE* pHeader = NULL;
 	const struct dysymtab_command* dysymtab_cmd = NULL;
-
-	if(stat(libPath, &st0) == -1)
-		return NULL;
 
 	pLib = dlLoadLibrary(libPath);
 	if(!pLib)
@@ -87,18 +82,26 @@ DLSyms* dlSymsInit(const char* libPath)
 	/* Loop over all dynamically linked images to find ours. */
 	for(i = 0, n = _dyld_image_count(); i < n; ++i)
 	{
-		struct stat st1;
 		const char* name = _dyld_get_image_name(i);
 
-		if(name && (stat(name, &st1) != -1))
+		if(name)
 		{
 			/* Don't rely on name comparison alone, as libPath might be relative, symlink, differently */
-			/* cased, etc., but compare inode number with the one of the mapped dyld image. */
-			if(st0.st_ino == st1.st_ino/*!strcmp(name, libPath)*/)
+			/* cased, use weird osx path placeholders, etc., but compare inode number with the one of the mapped dyld image. */
+
+			/* reload already loaded lib to get handle to compare with, should be lightweight and only increase ref count */
+			DLLib* pLib_ = dlLoadLibrary(name);
+			if(pLib_)
 			{
-				pHeader = (const struct MACH_HEADER_TYPE*) _dyld_get_image_header(i);
+				/* free / refcount-- */
+				dlFreeLibrary(pLib_);
+
+				if(pLib == pLib_)
+				{
+					pHeader = (const struct MACH_HEADER_TYPE*) _dyld_get_image_header(i);
 //@@@ slide = _dyld_get_image_vmaddr_slide(i);
-				break; /* found header */
+					break; /* found header */
+				}
 			}
 		}
 	}
